--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,3 +19,10 @@ logstash_enabled_on_boot: true
 
 logstash_install_plugins:
   - logstash-input-beats
+
+logstash_filters:
+  - 10-syslog.conf
+  - 11-nginx.conf
+  - 12-apache.conf
+  - 14-solr.conf
+  - 15-drupal.conf
